[package]
name = "git-tar"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
webbrowser = "0.5"
yansi = "0.5"